src/objects/SD_Document_Upload__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Protest_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agency Protest Case lookup field.</description>
        <label>Agency Protest Case</label>
        <referenceTo>Agency_Protest_Case__c</referenceTo>
        <relationshipName>SD_Document_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suspension_and_Debarment_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Suspension and Debarment Record lookup field.</description>
        <label>Suspension and Debarment Record</label>
        <referenceTo>Suspension_and_Debarment_Case__c</referenceTo>
        <relationshipName>SD_Document_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Upload</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SD Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Uploads</pluralLabel>
    <recordTypes>
        <fullName>Agency_Protest</fullName>
        <active>true</active>
        <description>Record type for Agency Protest record types.</description>
        <label>Agency Protest</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suspension_and_Debarment</fullName>
        <active>true</active>
        <description>Record type for Suspension and Debarment record Types</description>
        <label>Suspension and Debarment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>